# GameOfLife

./: CMakeLists.txt  README.md  fastSimulation.cpp  main.cpp  tests.cpp
headers/: Game.h  checkFilesForEquality.h  functions.h
include/: Game.h  functions.h
resources/: blinkerToadBeacon.txt  glider.txt  glider40Gen.txt  gliderGun.txt  pulsar.txt  temp.txt
sources/: Game.cpp  checkFilesForEquality.cpp  fastSimulation.cpp  functions.cpp  main.cpp  tests.cpp
src/: Game.cpp  functions.cpp  main.cpp
tests/: functions.h  test.cpp
